--- a/palas/WebContent/Registro de estudiantes.html
+++ b/palas/WebContent/Registro de estudiantes.html
@@ -5,7 +5,7 @@
 <title>jorgecardoza</title>
 </head>
 <body>
-hola a todos  esta onda ya esta  xd
+hola a todos  esta onda ya esta  xd jjjjjjjjjjjjjjjjjjjjjjjjjjjjjj
 <input type="text"name="hola">
 </body>
 </html>
